# DreamerUniverse-GalaxyTest

./: README.md
GalaxyTest/: CMakeLists.txt  GalaxyTest.sln
GalaxyTest/GalaxyTest/: GalaxyTest.vcxproj  GalaxyTest.vcxproj.filters
GalaxyTest/GalaxyTest/src/: GalaxyComponentConfig.h  GalaxyComponents.h  GalaxySystems.cpp  GalaxySystems.h  main.cpp
GalaxyTest/GalaxyTest/x64/Debug/: GalaxyTest.exe.recipe  GalaxyTest.ilk  vc142.idb
GalaxyTest/GalaxyTest/x64/Debug/GalaxyTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GalaxyTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GalaxyTest/GalaxyTest/x64/Release/: GalaxyTest.exe.recipe  GalaxyTest.iobj  GalaxyTest.ipdb
GalaxyTest/GalaxyTest/x64/Release/GalaxyTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GalaxyTest.lastbuildstate  GalaxyTest.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
GalaxyTest/x64/Release/: GalaxyTest.exp
